# DynaForce

./: README.md
data/GX11promax/: CMakeLists.txt  GX11promax.urdf  package.xml
data/GX11promax/config/: joint_names_GX11promax.yaml
data/GX11promax/launch/: display.launch  gazebo.launch
data/GX11promax/meshes/: Link1.STL  Link10.STL  Link11.STL  Link12.STL  Link13.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  Link8.STL  Link9.STL  base_link.STL
data/GX11promax/urdf/: GX11promax.csv  GX11promax.urdf
data/ident/: pos_list_0_0.npy  pos_list_0_1.npy  pos_list_0_2.npy  pos_list_0_3.npy  pos_list_0_4.npy  pos_list_1_0.npy  pos_list_1_1.npy  pos_list_1_2.npy  pos_list_1_3.npy  pos_list_1_4.npy  pos_list_2_0.npy  pos_list_2_1.npy  pos_list_2_2.npy  pos_list_2_3.npy  pos_list_2_4.npy  t_list_0_0.npy  t_list_0_1.npy  t_list_0_2.npy  t_list_0_3.npy  t_list_0_4.npy  t_list_1_0.npy  t_list_1_1.npy  t_list_1_2.npy  t_list_1_3.npy  t_list_1_4.npy  t_list_2_0.npy  t_list_2_1.npy  t_list_2_2.npy  t_list_2_3.npy  t_list_2_4.npy  torque_list_0_0.npy  torque_list_0_1.npy  torque_list_0_2.npy  torque_list_0_3.npy  torque_list_0_4.npy  torque_list_1_0.npy  torque_list_1_1.npy  torque_list_1_2.npy  torque_list_1_3.npy  torque_list_1_4.npy  (+20 more)
data/model/: estun_model_mdh.pkl  gx11_finger1.pkl  gx11_finger2.pkl  gx11_finger3.pkl  gx11pm_finger1.pkl  gx11pm_finger2.pkl  gx11pm_finger3.pkl
ident/: print_dyn.py
ident/real/: back_zero.py  beta_0.npy  (+18 more)
utils/: ForceEstimation.py  hand_data.npy  python_version.txt  qt_hand_recoder.py  qt_joint_control.py  recoder.py
(+122 files in other folders)
